--- a/Car_Price_Prediction/style.css
+++ b/Car_Price_Prediction/style.css
@@ -2,7 +2,7 @@
 
 /* Background Image Styling */
 .stApp {
-    background: url("https://images.pexels.com/photos/168938/pexels-photo-168938.jpeg?auto=compress&cs=tinysrgb&w=600") no-repeat center center fixed;
+    background: url("https://images.pexels.com/photos/112460/pexels-photo-112460.jpeg") no-repeat center center fixed;
     background-size: cover;
     opacity: 0.97;
 }
